Fix contrast

--- a/css/zurihac2022.css
+++ b/css/zurihac2022.css
@@ -210,7 +210,7 @@ footer {
 
 .schedule * .talk     { background-color: #a9e6cc }
 .schedule * .food     { background-color: #ffd0f5 }
-.schedule * .admin    { background-color: #fee161 }
+.schedule * .admin    { background-color: #fff0ae }
 
 
 /*******************************************************************************
